--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -390,20 +390,27 @@ function PopulateImagesSelector() {
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
       var result = JSON.parse(this.responseText);
-      for (var i = 0; i < result.length; i++) {
+      if (result.length == 0) {
         var newoption   = document.createElement("option");
-        newoption.text  = result[i]['DisplayName'];
-        newoption.value = result[i]['FileName'];
-        newoption.id    = result[i]['ID'];
-        if (i == result.length - 1) newoption.selected = true;
+        newoption.text  = 'No Runs for this version';
+        newoption.selected = true;
         document.getElementById("Plot").add(newoption);
-      }
-      sortSelect(document.getElementById("Plot"));
-      SetRunRange();
-      SetOptionsFromURL();
-      SetRunListOBJ();
-      if (document.getElementById("rcdb_query").value == "") {
-        ShowPlots();
+      } else {
+        for (var i = 0; i < result.length; i++) {
+          var newoption   = document.createElement("option");
+          newoption.text  = result[i]['DisplayName'];
+          newoption.value = result[i]['FileName'];
+          newoption.id    = result[i]['ID'];
+          if (i == result.length - 1) newoption.selected = true;
+          document.getElementById("Plot").add(newoption);
+        }
+        sortSelect(document.getElementById("Plot"));
+        SetRunRange();
+        SetOptionsFromURL();
+        SetRunListOBJ();
+        if (document.getElementById("rcdb_query").value == "") {
+          ShowPlots();
+        }
       }
     }
   }
