--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -248,7 +248,7 @@ function SetRunListOBJ() {
       document.getElementById("maxRunNum").value = int_run_list.max();
     }
   }
-  xmlhttp.open("GET", "js_utilities/set_run_list_obj.php?ID=" + document.getElementById("Version").options[document.getElementById("Version").selectedIndex].id, false);
+  xmlhttp.open("GET", "js_utilities/set_run_list_obj.php?verID=" + document.getElementById("Version").options[document.getElementById("Version").selectedIndex].id + "&typeID=" + document.getElementById("Plot").options[document.getElementById("Plot").selectedIndex].id, false);
   xmlhttp.send();
 }
 
